<resources>
    <string name="app_name">MADIStudents</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="exam_name">Предмет:</string>
    <string name="teacher">Преподаватель:</string>
    <string name="auditory">Номер аудитории:</string>
    <string name="date">Дата экзамена:</string>
    <string name="time">Время начала экзамена:</string>
    <string name="people_in_auditory">Заходить по (человек):</string>
    <string name="is_abstract_available">Пользоваться лекциями:</string>
    <string name="comment">Комментарий преподавателя:</string>
    <string name="button_ok">Ок</string>
    <string name="button_cancel">Отмена</string>
    <string name="button_del">Удалить</string>
    <string name="button_edit">Изменить</string>
    <string name="exam_name_hint">Название</string>
    <string name="teacher_name_hint">ФИО</string>
    <string name="auditory_hint">Номер аудитории</string>
    <string name="date_hint">Дата</string>
    <string name="time_hint">Время</string>
    <string name="people_in_auditory_hint">Количество</string>
    <string name="is_abstract_available_hint">Можно/Нельзя</string>
    <string name="comment_hint">Введите комментаий</string>
    <string name="plus_button_description">Довавить экзамен</string>
    <string name="plus">➕</string>
    <string name="for_start">Для начала работы выберете группу из меню слева</string>
    <string name="for_sort">Для сортировки по желаемому атрибуту -
        зажмите соответствующее поле</string>
</resources>